# mugeshbabu-agents-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
src/mugeshbabu_agents/: main.py
src/mugeshbabu_agents/api/v1/: agents.py  auth.py  chat.py  documents.py  teams.py
src/mugeshbabu_agents/core/: config.py  exceptions.py  middleware.py  rate_limit.py  types.py
src/mugeshbabu_agents/domain/agents/: models.py  service.py
src/mugeshbabu_agents/domain/auth/: models.py  service.py
src/mugeshbabu_agents/domain/chat/: models.py  service.py
src/mugeshbabu_agents/domain/documents/: pdf_service.py
src/mugeshbabu_agents/domain/teams/: models.py  service.py
src/mugeshbabu_agents/infrastructure/: db.py  repository.py
