[project]
name = "mugeshbabu-agents-service"
version = "0.1.0"
description = "BabuAI Backend Microservice for Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "motor>=3.4.0",
    "redis>=5.0.3",
    "playwright>=1.42.0",
    "aiobotocore>=2.12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "tenacity>=8.2.3",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.12.3",
    "aiofiles>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mugeshbabu_agents"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
